# oscal_clpy

./: .tool-versions  Makefile  README.md  pyproject.toml
oscal_clpy/: runtime.py  types.py  utils.py
tests/: test_runtime.py  test_utils.py
